# phantomx_pincher_robot_arm_edited

./: CMakeLists.txt  fake_joint_pub.py  package.xml  urdf.rviz
config/: joint_names_phantomx_pincher_robot_arm_edited.yaml  phantomx_pincher_robot_arm_edited.yaml  phantomx_pincher_robot_arm_edited_gripper.yaml
launch/: display.launch  display.launch~  gazebo.launch~
meshes/: arm_elbow_flex_link.STL  arm_shoulder_lift_link.STL  arm_shoulder_pan_link.STL  arm_wrist_flex_link.STL  arm_wrist_revol_link.STL  base_link.STL  gripper_link.STL  left_gripper_link.STL  right_gripper_link.STL
phantomx_pincher_robot_arm_edited/: package.xml
phantomx_pincher_robot_arm_edited/config/: joint_names_phantomx_pincher_robot_arm_edited.yaml
phantomx_pincher_robot_arm_edited/launch/: gazebo.launch
phantomx_pincher_robot_arm_edited/meshes/: arm_shoulder_lift_link.STL  arm_shoulder_pan_link.STL  arm_wrist_revol_link.STL  right_gripper_link.STL
phantomx_pincher_robot_arm_edited/urdf/: phantomx_pincher_robot_arm_edited.urdf  phantomx_pincher_robot_arm_edited.urdf~
scripts/: fake_joint_pub.py
urdf/: phantomx_pincher_robot_arm_edited.urdf
